--- a/src/app/components/PopularTours.module.css
+++ b/src/app/components/PopularTours.module.css
@@ -17,9 +17,9 @@
 }
 
 .cards {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
   gap: 40px;
+  justify-content: center;
 }
 
 .card {
