--- a/src/app/search/page.module.css
+++ b/src/app/search/page.module.css
@@ -141,6 +141,7 @@ padding: 24px;
   background: #e0e0e0;
   border-radius: 2px;
   margin: 20px 0;
+  width: 100%;
 }
 
 .sliderRange {
@@ -148,8 +149,8 @@ padding: 24px;
   height: 100%;
   background: #253168;
   border-radius: 2px;
-  left: 0;
-  right: 0;
+  left: 0%;
+  width: 0%;
 }
 
 .sliderThumbs {
@@ -644,6 +645,12 @@ justify-content: center;
 .featureSubtext{
   font: 400 14px / 143% var(--font-primary);
 color: #535862;
+}
+
+.ticketType {
+  font: 400 14px / 143% var(--font-primary);
+  color: #535862;
+  font-style: italic;
 }
 
 .viewOptionsBtn {
