--- a/src/app/booking/page.module.css
+++ b/src/app/booking/page.module.css
@@ -712,6 +712,9 @@ max-width: 450px;
   cursor: pointer;
   transition: background-color 0.2s;
   width: 100%;
+  text-decoration: none;
+  display: block;
+  text-align: center;
 }
 
 .kaspiButton:hover {
